[gd_scene load_steps=37 format=4 uid="uid://dvbvkflvwjrdb"]

[ext_resource type="Script" uid="uid://noslk6bfhew7" path="res://scripts/door_side.gd" id="1_djo6v"]
[ext_resource type="Texture2D" uid="uid://ubokohidmou7" path="res://assets/tilesets/plains.png" id="1_j7tj3"]
[ext_resource type="Texture2D" uid="uid://dqikcd1mfbhw0" path="res://assets/tilesets/grass.png" id="2_dc3vs"]
[ext_resource type="Texture2D" uid="uid://cygacchpj0lyy" path="res://assets/tilesets/fences.png" id="3_djo6v"]
[ext_resource type="Texture2D" uid="uid://dc1ysfbbsw363" path="res://assets/objects/objects.png" id="4_hbr7d"]
[ext_resource type="Texture2D" uid="uid://b7ienjjc1q2oi" path="res://assets/objects/chest.png" id="5_k4a78"]
[ext_resource type="Texture2D" uid="uid://c0u8sabj0cixv" path="res://assets/tilesets/floors/carpet.png" id="7_af4fb"]
[ext_resource type="Texture2D" uid="uid://bovyrgg6rtwh2" path="res://assets/tilesets/floors/wooden.png" id="8_3w5t1"]
[ext_resource type="PackedScene" uid="uid://bq3bs7j40w5n7" path="res://scenes/player.tscn" id="9_dc3vs"]
[ext_resource type="Texture2D" uid="uid://m2x214vyfeo2" path="res://assets/tilesets/walls/walls.png" id="10_jkuvt"]
[ext_resource type="Script" uid="uid://davpjsk45soa4" path="res://scripts/door_next_level.gd" id="11_hbr7d"]
[ext_resource type="Shader" uid="uid://dpk4soc1oa7ho" path="res://shaders/windy.gdshader" id="12_k4a78"]
[ext_resource type="Texture2D" uid="uid://dqpnhohx2knhh" path="res://assets/tilesets/walls/wooden_door_b.png" id="13_3w5t1"]
[ext_resource type="Shader" uid="uid://c0se7py3qjn2q" path="res://shaders/world.gdshader" id="13_5o52e"]
[ext_resource type="Script" uid="uid://24wkpl4317uw" path="res://scripts/cloud_controller.gd" id="14_af4fb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jkuvt"]
texture = ExtResource("1_j7tj3")
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
0:2/0 = 0
0:1/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/0 = 0
1:1/0 = 0
4:0/0 = 0
4:1/0 = 0
4:2/0 = 0
5:2/0 = 0
5:1/0 = 0
5:0/0 = 0
0:4/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:6/0 = 0
4:5/0 = 0
4:4/0 = 0
5:4/0 = 0
5:5/0 = 0
5:6/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.955893, -2.86768, 8, 8, -8, 8, -8, -2.54905)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -3.50494, 8, 8, -8, 8, -8, -2.23042)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -0.637262, -1.59315)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -4.46083, 8, -4.46083, -8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 3.50494, -8, 8, -8, -8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 5.09809, -8, 4.77946, -8, -8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -4.77946, 3.50494, -5.09809, -8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.77946, -8, 8, 7.32851, -8, 8, -8, -8)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_544b5"]
texture = ExtResource("2_dc3vs")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_luwu5"]
texture = ExtResource("3_djo6v")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.07628, -6.90374, -5.03604, -8, -5.2159, 8, 5.39576, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.07628, -6.90374, -8, -6.47491, -8, 5.93534, -2.94424, 7.00526, -1.21831, 8, 2.63966, 8, 4.06102, 6.59916, 8, 6.1152, 5.1778, 3.65492, 8, 3.55339, 8, -5.57562)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.07628, -6.90374, -8, -6.47491, -8, 5.93534, -2.94424, 7.00526, -1.21831, 8, 2.63966, 8, 4.06102, 6.59916, 8, 6.1152, 5.1778, 3.65492, 8, 3.55339, 8, -5.57562)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.29506, -8, 8, 5.75548, 8, 5.2159, -6.47491)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.1152, -8, -5.39576, 8, 5.75548, 8, 5.2159, -8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.85619, -8, -4.67633, -8, -5.03604, 8, 8, 8, 8, -8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.85619, -8, -8, -8, -8, 8, 8, 8, 8, -8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 5.75548, 8, 5.57562, -8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.85619, -8, -4.67633, -8, -5.03604, 6.47491, 5.93534, 6.1152)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.85619, -8, -4.67633, -8, -5.03604, 6.47491, 8, 6.1152, 8, -8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.85619, -8, -8, -8, -8, 8, 8, 8, 8, -8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 5.75548, 8, 5.57562, -8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.07628, -6.90374, -5.03604, -8, -4.85619, 5.93534, 5.39576, 5.75548)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.07628, -6.90374, -4.7717, -6.90374, -4.7717, 5.68543, -2.94424, 7.00526, -1.21831, 8, 2.63966, 8, 4.06102, 6.59916, 4.7717, 5.58391, 5.1778, 3.65492, 8, 3.55339, 8, -1.62441, 5.1778, -1.62441)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.07628, -6.90374, -8, -6.47491, -8, 5.93534, -2.94424, 7.00526, -1.21831, 8, 2.63966, 8, 4.06102, 6.59916, 8, 6.1152, 5.1778, 3.65492, 8, 3.55339, 8, -5.57562)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.29506, -8, 8, 5.75548, 8, 5.2159, -6.47491)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_okpyg"]
texture = ExtResource("4_hbr7d")
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 12
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(13.5418, -0.31863, 15.7722, 8.2844, 0.477943, 15.2943, -13.2232, 10.5148, -14.4977, 0.63726)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 20
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(7.48782, 14.657, 5.2574, 20.711, -5.57604, 19.7551, -8.44372, 12.4266)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 7
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0.31863, 12.2673, 5.41672, 8, 8, -4.62015, 8, -12.9045, 5.09809, -10.9928, -1.59315, 0.159313, 3.18631)
11:2/size_in_atlas = Vector2i(1, 2)
11:2/0 = 0
11:2/0/y_sort_origin = 7
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 0.318632, 6.85056, 13.3825, -6.53193, 14.657, -8, -0.31863)
0:0/0 = 0
0:0/0/y_sort_origin = 5
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.1423, 2.03051, 4.92399, 5.78696, -0.253814, 6.09153, -4.51789, 5.99001, -5.73619, 1.42136)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.34535, 1.82746, 6.64992, 5.48238, -0.0507622, 6.80221, -6.9545, 4.06102, -6.64992, 0.812204)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.04077, 2.63966, 6.44687, 6.29458, -5.93924, 6.19306, -6.24382, 2.53814)
10:0/size_in_atlas = Vector2i(2, 1)
10:0/0 = 0
10:0/0/y_sort_origin = 5
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.8276, -3.23746, -15.6477, 3.77703, 15.6477, 3.95689, 15.4679, -3.0576)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 22
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.44372, 13.3825, 7.16919, 13.7011, 10.6741, 19.1178, 7.16919, 25.8091, -4.62015, 25.8091, -10.0369, 20.0737)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_or4ql"]
texture = ExtResource("5_k4a78")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3w5t1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hf2si"]
texture = SubResource("CompressedTexture2D_3w5t1")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_urpe2"]
texture = ExtResource("7_af4fb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_depgb"]
texture = ExtResource("8_3w5t1")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ufimf"]
texture = ExtResource("10_jkuvt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ufimf"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_jkuvt")
sources/1 = SubResource("TileSetAtlasSource_544b5")
sources/2 = SubResource("TileSetAtlasSource_luwu5")
sources/3 = SubResource("TileSetAtlasSource_okpyg")
sources/4 = SubResource("TileSetAtlasSource_or4ql")
sources/5 = SubResource("TileSetAtlasSource_hf2si")
sources/6 = SubResource("TileSetAtlasSource_urpe2")
sources/7 = SubResource("TileSetAtlasSource_depgb")
sources/8 = SubResource("TileSetAtlasSource_ufimf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4a78"]
shader = ExtResource("12_k4a78")
shader_parameter/speed = 1.0
shader_parameter/minStrength = 0.02
shader_parameter/maxStrength = 0.05
shader_parameter/strengthScale = 10.0
shader_parameter/interval = 3.5
shader_parameter/detail = 1.0
shader_parameter/distortion = 0.0
shader_parameter/heightOffset = 0.0
shader_parameter/offset = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_djo6v"]
size = Vector2(32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkuvt"]
atlas = ExtResource("13_3w5t1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_544b5"]
atlas = ExtResource("13_3w5t1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_luwu5"]
atlas = ExtResource("13_3w5t1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_okpyg"]
atlas = ExtResource("13_3w5t1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_or4ql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkuvt")
}],
"loop": true,
"name": &"locked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_544b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luwu5")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okpyg")
}],
"loop": true,
"name": &"unlocked",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w5t1"]
size = Vector2(24.6687, 18.8468)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbr7d"]
size = Vector2(32.1477, 51.9325)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_af4fb"]
shader = ExtResource("13_5o52e")
shader_parameter/cloud_color = Color(0.639216, 0.639216, 0.639216, 0.384314)
shader_parameter/cloud_speed = 0.1
shader_parameter/zoom = 5.846
shader_parameter/pixel_size = 5.075
shader_parameter/FBM_octaves = 8
shader_parameter/density = 0.671
shader_parameter/edge_softness = 0.1
shader_parameter/screen_size = Vector2(0, 0)

[node name="door_side" type="Node2D"]
position = Vector2(2, -2)
script = ExtResource("1_djo6v")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_ufimf")
format = 2
layer_0/tile_data = PackedInt32Array(262152, 131080, 5, 262153, 131080, 5)

[node name="ground1" type="TileMapLayer" parent="TileMap"]
modulate = Color(0.843137, 0.615686, 0.870588, 1)
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAAACAAEAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAAACAAEAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAAACAAEAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAAACAAEAAAAIAAUAAAACAAEAAAAIAAgAAAACAAEAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAAACAAEAAAAJAAUAAAACAAEAAAAJAAYAAAACAAEAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAAACAAEAAAAKAAUAAAACAAEAAAAKAAYAAAACAAEAAAAKAAgAAQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAAACAAEAAAALAAUAAQAAAAAAAAALAAYAAAACAAEAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAANAAAAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAwAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABAAwAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAACAAwAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAAACAAEAAAAIAAkAAAACAAEAAAAIAAoAAAACAAEAAAAIAAsAAAACAAEAAAAIAAwAAAACAAEAAAAJAAkAAAACAAEAAAAJAAoAAAACAAEAAAAJAAsAAAACAAEAAAAJAAwAAAACAAEAAAAKAAkAAAACAAEAAAAKAAoAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANAAwAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAwAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAJAAgAAAACAAEAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAQAAAAAAAAAKAAcAAQAAAAAAAAAAAA0AAQAAAAAAAAABAA0AAQAAAAAAAAACAA0AAQAAAAAAAAADAA0AAQAAAAAAAAAEAA0AAQAAAAAAAAAFAA0AAQAAAAAAAAAGAA0AAQAAAAAAAAAHAA0AAQAAAAAAAAAIAA0AAAACAAEAAAAJAA0AAAACAAEAAAAKAA0AAQAAAAAAAAALAA0AAQAAAAAAAAAMAA0AAQAAAAAAAAANAA0AAQAAAAAAAAAOAA0AAQAAAAAAAAAPAA0AAQAAAAAAAAAQAA0AAQAAAAAAAAARAA0AAQAAAAAAAAARAA4AAQAAAAAAAAARAA8AAQAAAAAAAAARABAAAQAAAAAAAAARABEAAQAAAAAAAAAQABEAAQAAAAAAAAAPABEAAQAAAAAAAAAOABEAAQAAAAAAAAANABEAAQAAAAAAAAAMABEAAQAAAAAAAAALABEAAQAAAAAAAAAKABEAAQAAAAAAAAAJABEAAAACAAEAAAAIABEAAAACAAEAAAAHABEAAQAAAAAAAAAGABEAAQAAAAAAAAAFABEAAQAAAAAAAAAEABEAAQAAAAAAAAADABEAAQAAAAAAAAACABEAAQAAAAAAAAABABEAAQAAAAAAAAAAABEAAQAAAAAAAAAAABAAAQAAAAAAAAAAAA8AAQAAAAAAAAAAAA4AAQAAAAAAAAABAA4AAQAAAAAAAAACAA4AAQAAAAAAAAADAA4AAQAAAAAAAAAEAA4AAQAAAAAAAAAFAA4AAQAAAAAAAAAGAA4AAQAAAAAAAAAHAA4AAQAAAAAAAAAIAA4AAAACAAEAAAAJAA4AAAACAAEAAAAKAA4AAQAAAAAAAAALAA4AAQAAAAAAAAAMAA4AAQAAAAAAAAANAA4AAQAAAAAAAAAOAA4AAQAAAAAAAAAPAA4AAQAAAAAAAAAQAA4AAQAAAAAAAAADAA8AAQAAAAAAAAAEAA8AAQAAAAAAAAAFAA8AAQAAAAAAAAAGAA8AAQAAAAAAAAAHAA8AAQAAAAAAAAAIAA8AAAACAAEAAAAJABAAAAACAAEAAAAKABAAAQAAAAAAAAALABAAAQAAAAAAAAAMABAAAQAAAAAAAAANABAAAQAAAAAAAAAOABAAAQAAAAAAAAAPABAAAQAAAAAAAAAAABIAAQAAAAAAAAABAA8AAQAAAAAAAAABABAAAQAAAAAAAAABABIAAQAAAAAAAAACAA8AAQAAAAAAAAACABAAAQAAAAAAAAACABIAAQAAAAAAAAADABAAAQAAAAAAAAADABIAAQAAAAAAAAAEABAAAQAAAAAAAAAEABIAAQAAAAAAAAAFABAAAQAAAAAAAAAFABIAAQAAAAAAAAAGABAAAQAAAAAAAAAGABIAAQAAAAAAAAAHABAAAQAAAAAAAAAHABIAAQAAAAAAAAAIABAAAAACAAEAAAAIABIAAAACAAEAAAAJAA8AAAACAAEAAAAJABIAAAACAAEAAAAKAA8AAQAAAAAAAAAKABIAAQAAAAAAAAALAA8AAQAAAAAAAAALABIAAQAAAAAAAAAMAA8AAQAAAAAAAAAMABIAAQAAAAAAAAANAA8AAQAAAAAAAAANABIAAQAAAAAAAAAOAA8AAQAAAAAAAAAOABIAAQAAAAAAAAAPAA8AAQAAAAAAAAAPABIAAQAAAAAAAAAQAA8AAQAAAAAAAAAQABAAAQAAAAAAAAAQABIAAQAAAAAAAAARABIAAQAAAAAAAAAIAAYAAAACAAEAAAAIAAcAAAACAAEAAAAJAAcAAAACAAEAAAA=")
tile_set = SubResource("TileSet_ufimf")

[node name="cliff" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAAAAAACAAUAAAABAAEAAAACAAUAAAABAAIAAAACAAUAAAABAAMAAAACAAUAAAABAAQAAAACAAUAAAABAAUAAAACAAUAAAABAAYAAAACAAUAAAABAAsAAAACAAUAAAABAAwAAAACAAUAAAACAAAAAAACAAUAAAACAAEAAAACAAUAAAACAAIAAAACAAUAAAACAAMAAAACAAUAAAACAAQAAAACAAUAAAACAAUAAAACAAUAAAACAAYAAAACAAUAAAADAAAAAAACAAUAAAADAAEAAAACAAUAAAADAAIAAAACAAUAAAADAAMAAAACAAUAAAADAAQAAAACAAUAAAADAAUAAAACAAUAAAADAAYAAAACAAUAAAAEAAAAAAACAAUAAAAEAAEAAAACAAUAAAAEAAIAAAACAAUAAAAEAAMAAAAEAAQAAAAEAAQAAAADAAUAAAAEAAUAAAADAAUAAAAEAAYAAAADAAUAAAAEAAcAAAADAAUAAAAEAAsAAAADAAUAAAAEAAwAAAADAAUAAAAFAAAAAAACAAUAAAAFAAEAAAACAAUAAAAFAAIAAAACAAUAAAAFAAMAAAACAAYAAAAGAAAAAAACAAUAAAAGAAEAAAACAAUAAAAGAAIAAAACAAUAAAAGAAMAAAACAAYAAAAHAAIACAADAAEAAAAKAAIACAABAAEAAAAKAAMACAABAAEAAAAMAAAAAAACAAUAAAAMAAEAAAACAAUAAAAMAAIAAAACAAUAAAAMAAMAAAACAAYAAAANAAAAAAACAAUAAAANAAEAAAACAAUAAAANAAIAAAACAAUAAAANAAMAAAAFAAQAAAANAAQAAAABAAUAAAANAAUAAAABAAUAAAANAAYAAAABAAUAAAANAAcAAAABAAUAAAANAAgAAAABAAUAAAANAAkAAAABAAUAAAANAAoAAAABAAUAAAANAAsAAAABAAUAAAAOAAAAAAACAAUAAAAOAAEAAAACAAUAAAAOAAIAAAACAAUAAAAOAAMAAAACAAUAAAAOAAQAAAACAAUAAAAOAAUAAAACAAUAAAAOAAYAAAACAAUAAAAOAAcAAAACAAUAAAAOAAgAAAACAAUAAAAOAAkAAAACAAUAAAAOAAoAAAACAAUAAAAOAAsAAAACAAUAAAAOAAwAAAACAAUAAAAPAAAAAAACAAUAAAAPAAEAAAACAAUAAAAPAAIAAAACAAUAAAAPAAMAAAACAAUAAAAPAAQAAAACAAUAAAAPAAUAAAACAAUAAAAPAAYAAAACAAUAAAAPAAcAAAACAAUAAAAPAAgAAAACAAUAAAAPAAkAAAACAAUAAAAPAAoAAAACAAUAAAAPAAsAAAACAAUAAAAPAAwAAAACAAUAAAAQAAAAAAACAAUAAAAQAAEAAAACAAUAAAAQAAIAAAACAAUAAAAQAAMAAAACAAUAAAAQAAQAAAACAAUAAAAQAAUAAAACAAUAAAAQAAYAAAACAAUAAAAQAAcAAAACAAUAAAAQAAgAAAACAAUAAAAQAAkAAAACAAUAAAAQAAoAAAACAAUAAAAQAAsAAAACAAUAAAAQAAwAAAACAAUAAAARAAAAAAACAAUAAAARAAEAAAACAAUAAAARAAIAAAACAAUAAAARAAMAAAACAAUAAAARAAQAAAACAAUAAAARAAUAAAACAAUAAAARAAYAAAACAAUAAAARAAcAAAACAAUAAAARAAgAAAACAAUAAAARAAkAAAACAAUAAAARAAoAAAACAAUAAAARAAsAAAACAAUAAAARAAwAAAACAAUAAAAAAAAAAAACAAUAAAAAAAEAAAACAAUAAAAAAAIAAAACAAUAAAAAAAMAAAACAAUAAAAAAAQAAAACAAUAAAAAAAUAAAACAAUAAAAAAAYAAAACAAUAAAAAAAcAAAACAAUAAAAAAAsAAAACAAUAAAAAAAwAAAACAAUAAAABAAcAAAACAAUAAAACAAcAAAACAAUAAAADAAcAAAACAAUAAAADAAgAAAACAAUAAAADAAkAAAACAAUAAAADAAoAAAACAAUAAAADAAsAAAACAAUAAAADAAwAAAACAAUAAAABAAgAAAACAAUAAAACAAgAAAACAAUAAAACAAkAAAACAAUAAAACAAoAAAACAAUAAAACAAsAAAACAAUAAAACAAwAAAACAAUAAAAAAAgAAAACAAUAAAAAAAkAAAACAAUAAAAAAAoAAAACAAUAAAABAAkAAAACAAUAAAABAAoAAAACAAUAAAAEAAgAAAADAAUAAAAEAAkAAAADAAUAAAAEAAoAAAADAAUAAAANAAwAAAABAAUAAAAHAAQACAADAAEAAAAHAAMACAADAAEAAAAKAAQACAABAAEAAAAKAAUACAABAAEAAAAKAAYACAAAAAQAAAAKAAEACAABAAEAAAAKAAAACAABAAEAAAAHAAAACAADAAEAAAAHAAEACAADAAEAAAAHAAUACAADAAEAAAAHAAYACAAAAAQAAAAIAAQACAACAAUAAAAJAAQACAACAAUAAAAJAAMACAACAAUAAAAJAAIACAACAAUAAAAJAAEACAACAAUAAAAJAAAACAACAAUAAAAIAAAACAACAAUAAAAIAAEACAACAAUAAAAIAAIACAACAAUAAAAIAAMACAACAAUAAAA=")
tile_set = SubResource("TileSet_ufimf")

[node name="objects" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAGAAcAAwAAAAEAAAAGAAkAAwAKAAcAAAAGAAoAAwAAAAEAAAAGAAwAAwAKAAcAAAAKAAoAAwAKAAcAAAAKAAwAAwAAAAAAAAALAAgAAwAKAAcAAAALAAkAAwAAAAEAAAALAAsAAwAFAAAAAAAMAAcAAwAAAAEAAAAHAAYAAwAAAAEAAAA=")
tile_set = SubResource("TileSet_ufimf")

[node name="trees" type="TileMapLayer" parent="TileMap"]
modulate = Color(0.858824, 0.615686, 0.909804, 1)
y_sort_enabled = true
texture_filter = 1
material = SubResource("ShaderMaterial_k4a78")
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAwAAAAUAAAAAAAIAAwAIAAYAAAAAAAUAAwAAAAUAAAAAAAcAAwAIAAYAAAAAAAkAAwAIAAYAAAAAAAsAAwAIAAYAAAABAAEAAwAAAAUAAAABAAMAAwAIAAYAAAABAAYAAwAIAAYAAAACAAAAAwAIAAYAAAACAAIAAwAAAAUAAAACAAMAAwAIAAYAAAACAAgAAwAAAAUAAAADAAAAAwAIAAYAAAADAAUAAwAAAAUAAAADAAgAAwAAAAEAAAADAAkAAwAAAAUAAAADAAwAAwAIAAYAAAAEAAEAAwAGAAcAAAAEAAUAAwAAAAUAAAAEAAkAAwAIAAYAAAAEAAsAAwAIAAYAAAAFAAAAAwAAAAUAAAAFAAEAAwAIAAYAAAAFAAYAAwAAAAEAAAAFAAcAAwAAAAUAAAAFAAwAAwAAAAUAAAAGAAEAAwAGAAcAAAAGAAIAAwAGAAcAAAAGAAUAAwAAAAUAAAAGAAcAAwAAAAEAAAALAAIAAwAAAAUAAAALAAUAAwAAAAEAAAALAAYAAwAAAAUAAAALAAcAAwAAAAEAAAALAAsAAwAFAAAAAAAMAAIAAwAAAAUAAAAMAAQAAwAAAAUAAAAMAAUAAwAFAAAAAAAMAAkAAwAAAAUAAAAMAAwAAwAAAAUAAAANAAAAAwAIAAYAAAANAAIAAwAAAAEAAAANAAQAAwAIAAYAAAANAAYAAwAAAAUAAAANAAgAAwAIAAYAAAANAAoAAwAIAAYAAAAOAAEAAwAAAAUAAAAOAAMAAwAAAAUAAAAOAAUAAwAAAAEAAAAOAAcAAwAAAAUAAAAOAAkAAwAIAAYAAAAOAAsAAwAGAAcAAAAOAAwAAwAGAAcAAAAPAAIAAwAIAAYAAAAPAAUAAwAAAAUAAAAPAAcAAwAIAAYAAAAPAAgAAwAIAAYAAAAPAAoAAwAAAAUAAAAPAAsAAwAIAAYAAAAQAAAAAwAIAAYAAAAQAAIAAwAIAAYAAAAQAAYAAwAGAAcAAAAQAAgAAwAAAAUAAAAQAAsAAwAIAAYAAAAQAAwAAwAIAAYAAAARAAEAAwAAAAUAAAARAAMAAwAIAAYAAAARAAYAAwAIAAYAAAARAAgAAwAIAAYAAAARAAsAAwAAAAUAAAARAAwAAwAIAAYAAAAAAA0AAwAAAAUAAAAAAA4AAwAAAAUAAAADAA4AAwAAAAUAAAACAA8AAwAAAAUAAAAFAA4AAwAAAAUAAAAGAA8AAwAAAAUAAAAGABEAAwAAAAUAAAAEABEAAwAAAAUAAAABABIAAwAAAAUAAAAAABEAAwAAAAUAAAADABEAAwAAAAUAAAALAA4AAwAAAAUAAAANAA4AAwAAAAUAAAAPAA0AAwAAAAUAAAARAA8AAwAAAAUAAAARAA4AAwAAAAUAAAAQAA4AAwAAAAUAAAAPAA8AAwAAAAUAAAAMABAAAwAAAAUAAAARABEAAwAAAAUAAAALABAAAwAAAAUAAAALABEAAwAAAAUAAAABAA8AAwAAAAUAAAAEAA8AAwAAAAUAAAAFAAkAAwAAAAUAAAAEAAoAAwAAAAUAAAADAAsAAwAAAAUAAAACAAUAAwAAAAUAAAADAAYAAwAAAAUAAAABAAsAAwAAAAUAAAABAAkAAwAAAAUAAAACAAwAAwAAAAUAAAAOABAAAwAAAAUAAAAPABIAAwAAAAUAAAANABIAAwAAAAUAAAALAAMAAwAAAAUAAAAFAAMAAwAAAAUAAAADAAMAAwAAAAUAAAALAAAAAwAAAAUAAAAGAAAAAwAAAAUAAAAGAAMAAwAAAAUAAAAPAP//AwAAAAUAAAARAAUAAwAAAAUAAAA=")
tile_set = SubResource("TileSet_ufimf")

[node name="NextLevelDoor" type="StaticBody2D" parent="."]
script = ExtResource("11_hbr7d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelDoor"]
position = Vector2(144, 91)
shape = SubResource("RectangleShape2D_djo6v")

[node name="DoorSprite" type="AnimatedSprite2D" parent="NextLevelDoor"]
position = Vector2(144, 93)
scale = Vector2(2, 2.25)
sprite_frames = SubResource("SpriteFrames_or4ql")
animation = &"locked"

[node name="InteractionArea" type="Area2D" parent="NextLevelDoor"]
position = Vector2(141, 104)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelDoor/InteractionArea"]
position = Vector2(3, -1.00003)
scale = Vector2(1.13504, 2.01626)
shape = SubResource("RectangleShape2D_3w5t1")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(128, 80, 123, 94, 127, 102, 124, 112, 115, 112, 108, 123, 107, 130, 109, 143, 118, 155, 110, 162, 111, 174, 107, 179, 112, 195, 124, 193, 126, 207, 114, 209, 119, 295, 174, 296, 183, 211, 178, 204, 177, 190, 179, 178, 188, 169, 183, 162, 177, 154, 176, 145, 173, 142, 172, 131, 175, 129, 172, 125, 172, 120, 167, 113, 162, 108, 161, 99, 163, 88, 163, 84, 160, 81, 152, 82, 132, 81, 137, -21, 362, -17, 310, 328, -21, 328, -14, -41, 133, -8)

[node name="player" parent="." instance=ExtResource("9_dc3vs")]
position = Vector2(143, 200)

[node name="door_exit" type="Area2D" parent="."]
position = Vector2(-4, -4)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="door_exit"]
position = Vector2(146, 239)
scale = Vector2(1.57865, 1.07601)
shape = SubResource("RectangleShape2D_hbr7d")

[node name="cloud" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_af4fb")
offset_left = 4.0
offset_top = 15.0
offset_right = 292.0
offset_bottom = 317.0
script = ExtResource("14_af4fb")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(172, 131)

[connection signal="body_entered" from="NextLevelDoor/InteractionArea" to="NextLevelDoor" method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="NextLevelDoor/InteractionArea" to="NextLevelDoor" method="_on_interaction_area_body_exited"]
[connection signal="body_entered" from="door_exit" to="." method="_on_door_exit_body_entered"]
[connection signal="body_exited" from="door_exit" to="." method="_on_door_exit_body_exited"]
